Bug 740743 - Implement CSS overflow for <legend>.  r=bz